# Development-Methodologies-Afternotes

./: README.md  mkdocs.yml  pyproject.toml
docs/examples/: bitcoin.md  cdn.md  e_commerce..md  elaisian.md  eleven.md  financial_system.md  fortnite.md  iot.md  makerdao.md  mmo.md  netflix.md  nuvolaris.md  openwhisk.md  paypal.md  retail_organization.md  ripple.md  search_engines.md  social_media.md  system_legacy_update.md  waymo.md  zalando.md
docs/exams/: tip.md
docs/notes/: 100_intro.md  1500_technologies.md  200_code_review_env.md  300_dev_method.md  400_test_QA.md
docs/topics/: api_gateway.md  communication.md  performance.md  session.md
